--- a/website/style/style.css
+++ b/website/style/style.css
@@ -17,6 +17,16 @@ body {
   border: 1px solid  #434343;
 }
 
+.header-item {
+  transition: all 0.2s ease;
+}
+
+.header-item:hover {
+  color: white !important;
+  font-weight: bold;
+  border-bottom: 1px solid white;
+}
+
 a:hover {
   text-decoration: underline;
 }
@@ -38,7 +48,12 @@ a:hover {
 }
 
 .header-icon {
+  transition: all 0.2s ease;
   filter: invert(1) brightness(0.7) contrast(0.8);
+}
+
+.header-icon:hover {
+  filter: invert(1);
 }
 
 .white-icon {
